// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollback-element-version should return error for non-existent version ID 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The requested version could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`rollback-element-version should rollback element to a specific version 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
